# SmartSpectra-CPP-Examples

./: CMakeLists.txt  README.md
cpp_file_example/: BUILD.bazel  CMakeLists.txt  Dockerfile  README.md
cpp_grpc_example/: BUILD.bazel  CMakeLists.txt  README.md  main.cc
cpp_web_example/: BUILD.bazel  CMakeLists.txt  README.md  main.cc
docs/: output_format.md
grpc_continuous_example/: CMakeLists.txt  example_physiology_core_grpc_server.py  main.cc
image_file_folder_continuous_example/: CMakeLists.txt  main.cc
minimal_rest_spot_example/: CMakeLists.txt  main.cc
rest_spot_example/: CMakeLists.txt  main.cc
