package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

cc_binary(
    name = "cpp_file_example",
    srcs = [
        "main.cc",
        "//modules:configuration_header",
    ],
    deps = [
        "//modules:platform_independence",
        "//modules/container",
        "//modules/container:settings",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@mediapipe//mediapipe/framework/port:logging",
    ],
)
