load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "grpc_bundle",
    srcs = [
        ":cpp_grpc_example",
        ":dummy_physiology_core_grpc_server",
    ],
)

# DO NOT build/run bazel target until the TODO in WORKSPACE under "Python Build Rules" is resolved. Use
# regular python interpreter instead.
py_binary(
    name = "example_physiology_core_grpc_server",
    srcs = [
        "example_physiology_core_grpc_server.py",
    ],
    deps = [
        "//graph:physiology_core_service_python_grpc",
        requirement("grpcio-tools"),
        requirement("numpy"),
    ],
)

cc_binary(
    name = "cpp_grpc_example",
    srcs = [
        "main.cc",
    ],
    deps = [
        "//modules:platform_independence",
        "//modules/container",
        "//modules/container:settings",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@mediapipe//mediapipe/framework/port:logging",
    ],
)

exports_files(
    [
        "example_physiology_core_grpc_server.py",
    ],
)
